# kube-web-view

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  pyproject.toml
deploy/: deployment.yaml  rbac.yaml  service.yaml
docs/: alternatives.rst  conf.py  customization.rst  features.rst  getting-started.rst  index.rst  oauth2.rst  security.rst  setup.rst  vision.rst
examples/cluster-registry/: Dockerfile  README.md  cluster-registry.py
examples/oauth2-log-jwt-sub/: hooks.py
examples/oauth2-validate-github-token/: hooks.py
kube_web/: __init__.py  __main__.py  cluster_discovery.py  cluster_manager.py  example_hooks.py  jinja2_filters.py  joins.py  kubernetes.py  main.py  object_link_schema.yaml  object_links.py  query_params.py  resource_registry.py  selector.py  table.py  web.py
kube_web/templates/: base.html  cluster-resource-list.html  cluster.html  clusters.html  error.html  index.html  namespace.html  namespaced-resource-list.html  preferences.html  resource-list.html  resource-logs.html  resource-types.html  resource-view.html  search.html
kube_web/templates/assets/: fontawesome.min.js  kube-web.css  kube-web.js  navbar.js  regular.min.js  solid.min.js
kube_web/templates/assets/themes/darkly/: kube-web.css  settings.yaml
kube_web/templates/assets/themes/default/: kube-web.css  settings.yaml
kube_web/templates/assets/themes/flatly/: kube-web.css  settings.yaml
kube_web/templates/assets/themes/slate/: kube-web.css  settings.yaml
kube_web/templates/assets/themes/superhero/: kube-web.css  settings.yaml
kube_web/templates/partials/: events.html  footer.html  navbar.html  sidebar.html  yaml.html
tests/e2e/: conftest.py  deployment.yaml  test-resources.yaml  test_list.py  test_preferences.py  test_search.py  test_view.py  test_web.py  utils.py
tests/unit/: test_cluster_discovery.py  test_cluster_manager.py  test_jinja2_filters.py  test_joins.py  test_kubernetes.py  test_main.py  test_selector.py  test_table.py  test_web.py
