[tool.poetry]
name = "kube-web-view"
version = "0.1.0"
description = "Kubernetes Web UI"
authors = ["Henning Jacobs <henning@zalando.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pykube-ng = "^0.28.0"
Jinja2 = "^2.10"
aiohttp-jinja2 = "^1.1"
Pygments = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
pytest-cov = "^2.7"
Sphinx = "^2.1"
sphinx-rtd-theme = "^0.4.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
